<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/bg"
	android:orientation="vertical">

	<!--Тулбар-->
	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/toolbar_container"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:contentInsetLeft="0dp"
			app:contentInsetStart="0dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/status_bar"
				android:orientation="horizontal">

				<ImageView
					android:id="@+id/iv_back"
					android:layout_width="24dp"
					android:layout_height="24dp"
					android:layout_gravity="center"
					android:layout_marginStart="24dp"
					android:src="@drawable/ic_back" />

				<TextView
					android:id="@+id/title_repo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginStart="8dp"
					android:background="@color/status_bar"
					android:text="@string/toolbar_title"
					android:textSize="20sp" />

				<Space
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1" />

				<ImageButton
					android:id="@+id/logoutBtn"
					android:layout_width="22dp"
					android:layout_height="18dp"
					android:layout_marginBottom="19dp"
					android:layout_marginEnd="19dp"
					android:layout_marginTop="19dp"
					android:background="@color/status_bar"
					android:contentDescription="@string/logout_btn_desc"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:srcCompat="@drawable/ic_input" />
			</LinearLayout>
		</com.google.android.material.appbar.MaterialToolbar>
	</com.google.android.material.appbar.AppBarLayout>

	<ScrollView
		android:id="@+id/scroll_view"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:fillViewport="true"
		android:layout_weight="1"
		android:scrollbars="vertical">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:id="@+id/weblink"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="24dp"
				android:layout_marginStart="10dp"
				android:layout_marginTop="26dp"
				android:autoLink="web"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@+id/imageView2"
				app:layout_constraintTop_toTopOf="parent"
				tools:text="github.com/icerockdev/moko-resources" />

			<TextView
				android:id="@+id/stars"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="4dp"
				android:layout_marginTop="120dp"
				android:text="stars"
				app:layout_constraintStart_toEndOf="@+id/tvStarsCount"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/forks"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="165dp"
				android:layout_marginTop="120dp"
				android:text="forks"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/watchers"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="16dp"
				android:layout_marginTop="120dp"
				android:text="watchers"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/starImg"
				android:layout_width="16dp"
				android:layout_height="16dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="122dp"
				android:contentDescription="@string/star_img_desc"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@drawable/ic_star" />

			<ImageView
				android:id="@+id/forkImg"
				android:layout_width="18dp"
				android:layout_height="20dp"
				android:layout_marginEnd="4dp"
				android:layout_marginTop="120dp"
				android:contentDescription="@string/fork_image_desc"
				app:layout_constraintEnd_toStartOf="@+id/tvForksCount"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@drawable/ic_fork" />

			<ImageView
				android:id="@+id/watcherImg"
				android:layout_width="16dp"
				android:layout_height="16dp"
				android:layout_marginEnd="5dp"
				android:layout_marginTop="122dp"
				android:contentDescription="@string/watcher_image_desc"
				app:layout_constraintEnd_toStartOf="@+id/tvWatchersCount"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@drawable/ic_eye" />

			<ImageView
				android:id="@+id/imageView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="25dp"
				android:src="@drawable/ic_license"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/weblink" />

			<TextView
				android:id="@+id/license"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="6dp"
				android:layout_marginTop="28dp"
				android:text="@string/license_text"
				app:layout_constraintStart_toEndOf="@+id/imageView"
				app:layout_constraintTop_toBottomOf="@+id/weblink" />

			<TextView
				android:id="@+id/licenseVal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="32dp"
				android:layout_marginTop="28dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/weblink"
				tools:text="Apache-2.0" />

			<include
				android:id="@+id/readme_network_error_view"
				layout="@layout/network_error_view"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginTop="150dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<include
				android:id="@+id/readme_undefined_error_view"
				layout="@layout/undefined_error_view"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginTop="150dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/imageView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="16dp"
				android:layout_marginTop="24dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@drawable/ic_link" />

			<TextView
				android:id="@+id/tvStarsCount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="6dp"
				android:layout_marginTop="120dp"
				android:textColor="#FAD876"
				app:layout_constraintStart_toEndOf="@+id/starImg"
				app:layout_constraintTop_toTopOf="parent"
				tools:text="122" />

			<TextView
				android:id="@+id/tvWatchersCount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="4dp"
				android:layout_marginTop="120dp"
				android:textColor="#9CFFF9"
				app:layout_constraintEnd_toStartOf="@+id/watchers"
				app:layout_constraintTop_toTopOf="parent"
				tools:text="162" />

			<TextView
				android:id="@+id/tvForksCount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="4dp"
				android:layout_marginTop="120dp"
				android:textColor="#6ED370"
				app:layout_constraintEnd_toStartOf="@+id/forks"
				app:layout_constraintTop_toTopOf="parent"
				tools:text="123" />

			<RelativeLayout
				android:id="@+id/readme_loading_view"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginTop="150dp"
				android:background="@color/bg"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">

				<ProgressBar
					android:id="@+id/readme_progress_bar"
					android:layout_width="40dp"
					android:layout_height="40dp"
					android:layout_centerInParent="true"
					android:layout_marginTop="300dp"
					android:background="@color/bg"
					android:indeterminate="true"
					android:indeterminateTint="@color/white" />

				<TextView
					android:id="@+id/repoDescription"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginEnd="8dp"
					android:layout_marginStart="8dp"
					android:layout_marginTop="16dp" />
			</RelativeLayout>

		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

	<include
		android:id="@+id/main_undefined_error_view"
		layout="@layout/undefined_error_view" />

	<include
		android:id="@+id/main_network_error_view"
		layout="@layout/network_error_view" />

	<RelativeLayout
		android:id="@+id/main_loading_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/bg">

		<ProgressBar
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_centerInParent="true"
			android:background="@color/bg"
			android:indeterminate="true"
			android:indeterminateTint="@color/white" />
	</RelativeLayout>

</LinearLayout>